# shift

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  isort.conf  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 01ee1d016c81_test_running_migrations.py  02c109794eb9_change_user_s_model.py  030b57c8ef98_test_running_migrations.py  141cd40c6a7f_test_running_migrations.py  14b85cdbf002_test_running_migrations.py  16f22a433920_test_running_migrations.py  18fb6bf09886_test_running_migrations.py  230744984392_test_running_migrations.py  23f115caa39a_change_user_s_model.py  2bd9c4c652be_test_running_migrations.py  2fd2c735171c_test_running_migrations.py  315565db553a_test_running_migrations.py  3912e1b3c052_test_running_migrations.py  443d5610ec3c_test_running_migrations.py  46b48b344ea4_test_running_migrations.py  4771a1388e61_test_running_migrations.py  47b1af3a7e37_test_running_migrations.py  483e643e3041_test_running_migrations.py  51b16b017435_test_running_migrations.py  611cc718759a_test_running_migrations.py  615d9ccd2338_test_running_migrations.py  64330c99d344_test_running_migrations.py  7100d0ba4f6a_test_running_migrations.py  711481889413_change_user_s_model.py  71a7f983bd00_create_user_s_table.py  71ec965a3913_test_running_migrations.py  734f4d1136fc_change_user_s_model.py  76fc66240334_test_running_migrations.py  77a99d56c8cb_change_user_s_model.py  7dfce9c0b7ed_test_running_migrations.py  7e30642d41fb_test_running_migrations.py  8011ab20bac8_test_running_migrations.py  8050c64a151f_change_user_s_model.py  8bdead7a445e_change_user_s_model.py  903fc81c1ad8_test_running_migrations.py  9637908b58e1_test_running_migrations.py  (+16 more)
shift/: main.py  settings.py
templates/: base.html  user.html
tests/: conftest.py  test_api.py
(+287 files in other folders)
