[tool.poetry]
name = "shift"
version = "0.1.0"
description = ""
authors = ["Nikita Kolesnik <kolesniknikita21@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.22.0"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
